# hollow_nogo_alpha_zero

./: CMakeLists.txt  README.md  agent.h  clean.sh  nogo.cpp  run-gogui-twogtp.sh  stateTorch.h
train/: CMakeLists.txt  evaluate_model.cpp  main.cpp  write_histroy.py
